WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89877
[EFL][WK2] Missing ViewIsFocused flag in viewStateDidChange call inside of _ewk_view_smart_focus_out() function.
https://bugs.webkit.org/show_bug.cgi?id=89877
Summary
[EFL][WK2] Missing ViewIsFocused flag in viewStateDidChange call inside of _e...
Piotr Roguski
Reported
2012-06-25 07:13:58 PDT
WebPageProxy::ViewIsFocused flag needs to be added to WebPageProxy::ViewFocusStateChange() call inside of _ewk_view_smart_focus_out(). Omitting this flag will prevent ViewFocusStateChange() from sending Messages::WebPage::SetFocused(bool): void WebPageProxy::viewStateDidChange(ViewStateFlags flags) { if (!isValid()) return; if (flags & ViewIsFocused) process()->send(Messages::WebPage::SetFocused(m_pageClient->isViewFocused()), m_pageID); /* ... */ }
Attachments
Patch adding missing flag to viewStateDidChange call
(1.48 KB, patch)
2012-06-27 06:37 PDT
,
Piotr Roguski
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Piotr Roguski
Comment 1
2012-06-27 06:37:14 PDT
Created
attachment 149739
[details]
Patch adding missing flag to viewStateDidChange call
Grzegorz Czajkowski
Comment 2
2012-07-02 07:30:04 PDT
LGTM. We need to send a message to WebProcess - SetFocused(false) on focus out. We are doing the same in WK1 directly on FocusController object:
http://trac.webkit.org/browser/trunk/Source/WebKit/efl/ewk/ewk_view.cpp#L560
WebKit Review Bot
Comment 3
2012-07-03 08:40:17 PDT
Comment on
attachment 149739
[details]
Patch adding missing flag to viewStateDidChange call Clearing flags on attachment: 149739 Committed
r121770
: <
http://trac.webkit.org/changeset/121770
>
WebKit Review Bot
Comment 4
2012-07-03 08:40:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug