[EFL][WK2] Added missing WebPageProxy::ViewIsFocused flag to WebPageProxy::viewStateDidChange() call in _ewk_view_smart_focus_out() function. https://bugs.webkit.org/show_bug.cgi?id=89877

Patch by Piotr Roguski <p.roguski@samsung.com> on 2012-07-03
Reviewed by Andreas Kling.

Although name of the flag suggest it should be used only on focus in,
omitting it in case of focus out will prevent WebPageProxy::viewStateDidChange()
from sending Messages::WebPage::SetFocused(false).

* UIProcess/API/efl/ewk_view.cpp:
(_ewk_view_smart_focus_out):

Canonical link: https://commits.webkit.org/108330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121770 268f45cc-cd09-0410-ab3c-d52691b4dbfc